# Otimizando-o-Sistema-Bancario_API---Projeto-5-DIO-

./: README.md  alembic.ini  comando_migracao.sh  main.py  pyproject.toml  security.py  sistema_bancario.db
alembic/: env.py
controllers/: clientes.py  conta.py  conta_corrente.py  endereco.py  historico.py  login.py  pessoa_fisica.py
db/: session.py  setup.py
models/: cliente.py  conta.py  conta_corrente.py  endereco.py  historico.py  login.py  pessoa_fisica.py
schemas/: autenticacao.py  cliente.py  conta.py  conta_corrente.py  endereco.py  historico.py  login.py  pessoa_fisica.py
services/: cliente.py  conta.py  conta_corrente.py  endereco.py  historico.py  pessoa_fisica.py
view/: cliente.py  endereco.py  historico.py  pessoa_fisica.py
